results/4873207/tff.4873207.1.log
Traceback (most recent call last):
  File "tff_main.py", line 1, in <module>
    import iid
  File "/home/apawlik/federated/iid.py", line 1, in <module>
    import partitioner
  File "/home/apawlik/federated/partitioner.py", line 189
    print(f"{toc - tic:0.4f} seconds")
                                    ^
SyntaxError: invalid syntax
